<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1">
        <item
            android:icon="@drawable/menu"
            android:id="@+id/navMenu"
            android:title="@string/nav_menu"/>

        <item
            android:icon="@drawable/cart"
            android:id="@+id/navCart"
            android:title="@string/nav_cart"/>

        <item
            android:icon="@drawable/favourite"
            android:id="@+id/navFav"
            android:title="@string/nav_fav"/>

    </group >

    <group
        android:id="@+id/group2">
        <item
            android:icon="@drawable/orders"
            android:id="@+id/navOrders"
            android:title="@string/nav_orders"/>

        <item
            android:icon="@drawable/history"
            android:id="@+id/navHistory"
            android:title="@string/nav_history"/>


    </group>


    <group
        android:id="@+id/group3">
        <item
            android:icon="@drawable/feedback"
            android:id="@+id/navFeedback"
            android:title="@string/nav_feedback"/>

        <item
            android:icon="@drawable/terms"
            android:id="@+id/navTerms"
            android:title="@string/nav_terms"/>

        <item
            android:icon="@drawable/contact"
            android:id="@+id/navContact"
            android:title="@string/nav_contact"/>

    </group>

    <item
        android:icon="@drawable/share"
        android:id="@+id/navShare"
        android:title="@string/nav_share"/>


</menu>